// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Pagination Pagination 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-1>* {
  padding: 0.5rem;
}

.emotion-2 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #030303;
  background-color: transparent;
  padding: 0;
  height: 2.25rem;
  opacity: 0.5;
  border-radius: 100%;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2.25rem;
}

.emotion-3 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  fill: #030303;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-4 path {
  fill: #030303;
}

.emotion-8 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #030303;
  background-color: transparent;
  padding: 0;
  height: 2.25rem;
  opacity: 1;
  border-radius: 100%;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2.25rem;
}

.emotion-8:hover {
  background-color: rgba(3,3,3,0.1);
}

.emotion-8:active {
  background-color: rgba(3,3,3,0.2);
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <button
      className="emotion-2"
      data-testid="icon-button"
      disabled={true}
      onClick={[Function]}
    >
      <span
        className="emotion-3"
        onClick={[Function]}
      >
        <span
          className="emotion-4"
        />
      </span>
    </button>
    <button
      className="emotion-2"
      data-testid="icon-button"
      disabled={true}
      onClick={[Function]}
    >
      <span
        className="emotion-3"
        onClick={[Function]}
      >
        <span
          className="emotion-4"
        />
      </span>
    </button>
    <div>
      Page 
      1
       of 
      3
    </div>
    <button
      className="emotion-8"
      data-testid="icon-button"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="emotion-3"
        onClick={[Function]}
      >
        <span
          className="emotion-4"
        />
      </span>
    </button>
    <button
      className="emotion-8"
      data-testid="icon-button"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="emotion-3"
        onClick={[Function]}
      >
        <span
          className="emotion-4"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Design System/Pagination Pagination without all buttons 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-1>* {
  padding: 0.5rem;
}

.emotion-2 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #030303;
  background-color: transparent;
  padding: 0;
  height: 2.25rem;
  opacity: 0.5;
  border-radius: 100%;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2.25rem;
}

.emotion-3 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  fill: #030303;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-4 path {
  fill: #030303;
}

.emotion-5 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #030303;
  background-color: transparent;
  padding: 0;
  height: 2.25rem;
  opacity: 1;
  border-radius: 100%;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2.25rem;
}

.emotion-5:hover {
  background-color: rgba(3,3,3,0.1);
}

.emotion-5:active {
  background-color: rgba(3,3,3,0.2);
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <button
      className="emotion-2"
      data-testid="icon-button"
      disabled={true}
      onClick={[Function]}
    >
      <span
        className="emotion-3"
        onClick={[Function]}
      >
        <span
          className="emotion-4"
        />
      </span>
    </button>
    <div>
      Page 
      1
       of 
      3
    </div>
    <button
      className="emotion-5"
      data-testid="icon-button"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="emotion-3"
        onClick={[Function]}
      >
        <span
          className="emotion-4"
        />
      </span>
    </button>
  </div>
</div>
`;
